# TEC4GOOD

./: .gitignore  .pre-commit-config.yaml  Arduino Oximeter  LICENSE  LaunchScreen.storyboard  README.md  SECURITY.md  TERMS_AND_CONDITIONS.md  adhd_activity_planner.py  build-ios.yml  capacitor.config (12).json  eslint.config.js  index.css  index.html  main.py  nutrition_advisor (1).py  pulso_simple.ino  pyproject.toml  requirements-dev.txt  requirements.txt  sensooooor2.ino  skesh2.ino
.github/workflows/: ci.yml
arduino/sensooooor2_ble/: sensooooor2_ble.ino
ios-app/: README.md  project.yml
ios-app/TEC4GOOD/: ContentView.swift  TEC4GOODApp.swift
ios-app/TEC4GOOD.xcodeproj/: project.pbxproj
ios-app/TEC4GOOD/Assets.xcassets/AccentColor.colorset/: Contents.json
ios-app/TEC4GOOD/Models/: CalibrationState.swift  Reading.swift  Session.swift
ios-app/TEC4GOOD/Services/: BluetoothManager.swift  CSVParser.swift  MockDataProvider.swift
ios-app/TEC4GOOD/ViewModels/: MonitorViewModel.swift
ios-app/TEC4GOOD/Views/: CalibrationView.swift  ConnectionView.swift  DisclaimerView.swift  HistoryView.swift  LiveMonitorView.swift  SettingsView.swift
tests/: conftest.py  test_adhd_planner.py  test_nutrition_advisor.py
